--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "koa-redis": "^3.0.0",
     "koa-router": "^7.2.1",
     "koa-static-cache": "^5.1.1",
-    "mysql": "^2.14.1"
+    "mysql": "^2.14.1",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
