--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "boom": "^5.2.0",
     "koa": "^2.3.0",
+    "koa-ejs": "^4.1.0",
     "koa-generic-session": "^2.0.0",
     "koa-redis": "^3.0.0",
     "koa-router": "^7.2.1",
