--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,10 @@
   },
   "dependencies": {
     "boom": "^5.2.0",
+    "co-redis": "^2.1.1",
+    "co-wrap-all": "^1.0.0",
+    "debug": "^3.0.1",
+    "ioredis": "^3.1.4",
     "koa": "^2.3.0",
     "koa-ejs": "^4.1.0",
     "koa-generic-session": "^2.0.0",
@@ -14,6 +18,7 @@
     "koa-router": "^7.2.1",
     "koa-static-cache": "^5.1.1",
     "mysql": "^2.14.1",
+    "react": "^15.6.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
