--- a/sentinel/sentinel.conf
+++ b/sentinel/sentinel.conf
@@ -1,6 +1,6 @@
 port 26379
 dir /tmp
-sentinel monitor mymaster rs 6379 $SENTINEL_QUORUM
-sentinel down-after-milliseconds mymaster $SENTINEL_DOWN_AFTER
-sentinel parallel-syncs mymaster 1
-sentinel failover-timeout mymaster $SENTINEL_FAILOVER
+sentinel monitor redismaster rs 6379 $SENTINEL_QUORUM
+sentinel down-after-milliseconds redismaster $SENTINEL_DOWN_AFTER
+sentinel parallel-syncs redismaster 1
+sentinel failover-timeout redismaster $SENTINEL_FAILOVER
